--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mongoose": "^5.0.1",
     "nodemon": "^1.18.10",
     "request": "^2.88.0"
