Integration bcrypt node modules

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ranjan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
