--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.0.1",
     "nodemon": "^1.18.10",
